# apache-airflow

./: .pre-commit-config.yaml  Dockerfile.ci  INSTALL  hatch_build.py  pyproject.toml
.github/: boring-cyborg.yml
.github/workflows/: ci.yml  cross-providers.yml
airflow/: exceptions.py  providers_manager.py  settings.py
airflow/_vendor/: README.md
airflow/api/common/: mark_tasks.py  trigger_dag.py
airflow/api_connexion/endpoints/: task_instance_endpoint.py
airflow/api_connexion/openapi/: v1.yaml
airflow/api_connexion/schemas/: dag_run_schema.py  task_instance_schema.py
airflow/callbacks/: callback_requests.py
airflow/cli/: cli_config.py
airflow/cli/commands/: dag_command.py  task_command.py
airflow/config_templates/: config.yml
airflow/dag_processing/: manager.py  processor.py
airflow/datasets/: __init__.py
airflow/decorators/: base.py
airflow/executors/: base_executor.py
airflow/jobs/: backfill_job_runner.py  local_task_job_runner.py  scheduler_job_runner.py
airflow/listeners/: listener.py
airflow/migrations/versions/: 0146_2_10_0_add_triggered_by_field_to_dagrun_table.py
airflow/models/: baseoperator.py  connection.py  dag.py  dagrun.py  dagwarning.py  taskinstance.py  toggle_dag_callback.py  xcom_arg.py
airflow/operators/: subdag.py  trigger_dagrun.py
airflow/providers/celery/: provider.yaml
airflow/providers/celery/executors/: celery_executor.py  celery_executor_utils.py
airflow/providers/databricks/hooks/: databricks.py
airflow/providers/databricks/operators/: databricks.py
airflow/providers/databricks/triggers/: databricks.py
airflow/providers/docker/operators/: docker.py
airflow/providers/google/: provider.yaml
airflow/providers/openlineage/: conf.py  provider.yaml  sqlparser.py
airflow/providers/openlineage/extractors/: base.py  bash.py  manager.py  python.py
airflow/providers/openlineage/plugins/: adapter.py  facets.py  listener.py
airflow/providers/openlineage/utils/: sql.py  utils.py
airflow/providers/opensearch/hooks/: opensearch.py
airflow/providers/opentelemetry/: util.py
airflow/providers/opentelemetry/hooks/: otel.py
airflow/providers/oracle/hooks/: oracle.py
airflow/providers/snowflake/hooks/: snowflake.py
airflow/providers/snowflake/transfers/: copy_into_snowflake.py
airflow/providers/tabular/: provider.yaml
airflow/sensors/: base.py
airflow/serialization/: schema.json  serialized_objects.py
airflow/serialization/pydantic/: taskinstance.py
airflow/utils/: db.py  state.py  task_group.py  types.py
airflow/utils/log/: file_task_handler.py  logging_mixin.py
airflow/www/: app.py  package.json  utils.py  views.py
airflow/www/static/js/: dags.js
airflow/www/templates/airflow/: dags.html
chart/: values.schema.json  values.yaml
chart/templates/: _helpers.yaml
chart/templates/scheduler/: scheduler-deployment.yaml
chart/templates/triggerer/: triggerer-deployment.yaml
chart/templates/webserver/: webserver-deployment.yaml
chart/templates/workers/: worker-deployment.yaml
contributing-docs/: 03_a_contributors_quick_start.rst  03_b_contributors_quick_start_breeze.rst  03_d_contributors_quick_start_pr.rst  12_airflow_dependencies_and_extras.rst
contributing-docs/testing/: integration_tests.rst
dev/breeze/doc/images/: output_build-docs.txt  output_release-management_prepare-provider-packages.txt  output_release-management_publish-docs.txt  output_shell.txt  output_start-airflow.txt  output_testing_integration-tests.txt  output_testing_non-db-tests.txt  (+1 more)
dev/breeze/tests/: test_selective_checks.py
docs/: spelling_wordlist.txt
docs/apache-airflow/: extra-packages-ref.rst  migrations-ref.rst
docs/apache-airflow-providers-openlineage/guides/: developer.rst
docs/apache-airflow/authoring-and-scheduling/: deferring.rst
docs/apache-airflow/core-concepts/: debug.rst  operators.rst
docs/apache-airflow/img/: airflow_erd.sha256
helm_tests/airflow_aux/: test_pod_template_file.py
helm_tests/other/: test_git_sync_scheduler.py
scripts/ci/docker-compose/: integration-celery.yml  integration-otel.yml
scripts/docker/: entrypoint_ci.sh
scripts/in_container/: check_environment.sh
tests/: conftest.py  deprecations_ignore.yml
tests/always/: test_connection.py  test_example_dags.py  test_project_structure.py
tests/api_connexion/endpoints/: test_dag_run_endpoint.py  test_extra_link_endpoint.py  test_task_instance_endpoint.py
tests/api_connexion/schemas/: test_dag_run_schema.py
tests/api_experimental/client/: test_local_client.py
tests/api_experimental/common/: test_mark_tasks.py  test_trigger_dag.py
tests/callbacks/: test_callback_requests.py
tests/cli/commands/: test_dag_command.py  test_task_command.py
tests/dag_processing/: test_job_runner.py  test_processor.py
tests/datasets/: test_dataset.py
tests/decorators/: test_python.py
tests/integration/executors/: test_celery_executor.py
tests/jobs/: test_backfill_job.py  test_local_task_job.py  test_scheduler_job.py
tests/models/: test_baseoperator.py  test_cleartasks.py  test_connection.py  test_dag.py  test_dagrun.py  test_serialized_dag.py  test_taskinstance.py
tests/operators/: test_bash.py  test_branch_operator.py  test_datetime.py  test_latest_only_operator.py  test_python.py  test_subdag_operator.py  test_trigger_dagrun.py  test_weekday.py
tests/providers/openlineage/: test_sqlparser.py
tests/sensors/: test_base.py  test_external_task_sensor.py
tests/serialization/: test_dag_serialization.py  test_pydantic_models.py
tests/task/task_runner/: test_standard_task_runner.py
tests/test_utils/: mock_executor.py
tests/utils/: test_log_handlers.py  test_sqlalchemy.py  test_state.py  test_task_handler_with_custom_formatter.py  test_types.py
tests/utils/log/: test_task_context_logger.py
tests/www/: test_security_manager.py  test_utils.py
tests/www/views/: test_views.py  test_views_acl.py  test_views_blocked.py  test_views_dagrun.py  test_views_decorators.py  test_views_extra_links.py  test_views_home.py  test_views_log.py  test_views_rendered.py  test_views_tasks.py
(+52 files in other folders)
